# BetterMaths

./: .gitignore  LICENSE  README.md  generate.bat  generate.py  geometry.py  main.py  publish.py  pyproject.toml  test  test.json  test.py
assets/css/: untitled.css
changelogs/: 0.0.4.md  0.0.5.md
page/: index.html
page/assets/bootstrap/css/: bootstrap.min.css
src/: geometry.py  main.py  probability.py
src/BetterMaths/: __init__.py  main.py  main.pyi
src/BetterMaths/geometry/: main.py
src/BetterMaths/probability/: main.py
src/BetterMaths/scalarProduct/: main.py
src/BetterMaths/sequences/: main.py
src/BetterMaths/solidGeometry/: main.py
src/package/: LICENSE  README.md  pyproject.toml
src/package/src/BetterMath/: main.py  probability.py
src/package/src/BetterMaths/: __init__.py  geometry.py  main.py  probability.py
src/package/src/BetterMaths/geometry/: main.py
src/package/src/BetterMaths/probability/: main.py
tests/: __init__.py  main.py
