[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "BetterMaths"
version = "0.0.3"
dependencies = [
  "sympy"
]
authors = [
  { name="Dhaiven", email="bettermath.get.help@gmail.com" },
  { name="algorythmTTV", email="bettermath.get.help@gmail.com" },
]
description = "Python mathematics made easier"
readme = "README.md"
requires-python = ">=3.4"
classifiers = [
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["math", "mathematics", "better", "easier", "simple", "easy"]

[project.urls]
Homepage = "https://dhaiven.github.io/"
Documentation = "https://dhaiven.github.io/BetterMaths/wiki"
Repository = "https://github.com/Dhaiven/BetterMaths"